--- a/src/Riganti.Bomberman/Riganti.Bomberman/wwwroot/index.html
+++ b/src/Riganti.Bomberman/Riganti.Bomberman/wwwroot/index.html
@@ -18,6 +18,7 @@
             font-family: 'Cascadia Code', sans-serif;
             color: white;
             background: black;
+            user-select: none;
         }
 
         button {
@@ -81,20 +82,15 @@
         }
 
             .step-1 .buttons {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
-                gap: 10px;
-                width: 100%;
                 height: 100%;
+                display: grid;
+                grid-template-columns: min(48%, 250px) auto min(48%, 250px);
+                align-items: end;
             }
-
-                .step-1 .buttons button {
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    font-family: 'Cascadia Code', sans-serif;
-                }
+        
+        .step-1 {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -119,33 +115,37 @@
 
     <div class="step-1">
         <div class="buttons">
-            <div></div>
             <div>
-                <button data-command="u">
-                    <i class="bi-arrow-up"></i>
-                </button>
+                <svg class="bomb" viewBox="0 0 512 512">
+                    <circle cx="255" cy="255" r="255" fill="yellow" />
+                    <g transform="translate(140,110) scale(0.5,0.5)">
+                        <path d="m411.313,123.313c6.25-6.25 6.25-16.375 0-22.625s-16.375-6.25-22.625,0l-32,32-9.375,9.375-20.688-20.688c-12.484-12.5-32.766-12.5-45.25,0l-16,16c-1.261,1.261-2.304,2.648-3.31,4.051-21.739-8.561-45.324-13.426-70.065-13.426-105.867,0-192,86.133-192,192s86.133,192 192,192 192-86.133 192-192c0-24.741-4.864-48.327-13.426-70.065 1.402-1.007 2.79-2.049 4.051-3.31l16-16c12.5-12.492 12.5-32.758 0-45.25l-20.688-20.688 9.375-9.375 32.001-31.999zm-219.313,100.687c-52.938,0-96,43.063-96,96 0,8.836-7.164,16-16,16s-16-7.164-16-16c0-70.578 57.422-128 128-128 8.836,0 16,7.164 16,16s-7.164,16-16,16z" />
+                        <path d="m459.02,148.98c-6.25-6.25-16.375-6.25-22.625,0s-6.25,16.375 0,22.625l16,16c3.125,3.125 7.219,4.688 11.313,4.688 4.094,0 8.188-1.563 11.313-4.688 6.25-6.25 6.25-16.375 0-22.625l-16.001-16z" />
+                        <path d="m340.395,75.605c3.125,3.125 7.219,4.688 11.313,4.688 4.094,0 8.188-1.563 11.313-4.688 6.25-6.25 6.25-16.375 0-22.625l-16-16c-6.25-6.25-16.375-6.25-22.625,0s-6.25,16.375 0,22.625l15.999,16z" />
+                        <path d="m400,64c8.844,0 16-7.164 16-16v-32c0-8.836-7.156-16-16-16-8.844,0-16,7.164-16,16v32c0,8.836 7.156,16 16,16z" />
+                        <path d="m496,96.586h-32c-8.844,0-16,7.164-16,16 0,8.836 7.156,16 16,16h32c8.844,0 16-7.164 16-16 0-8.836-7.156-16-16-16z" />
+                        <path d="m436.98,75.605c3.125,3.125 7.219,4.688 11.313,4.688 4.094,0 8.188-1.563 11.313-4.688l32-32c6.25-6.25 6.25-16.375 0-22.625s-16.375-6.25-22.625,0l-32,32c-6.251,6.25-6.251,16.375-0.001,22.625z" />
+                    </g>
+                </svg>
             </div>
             <div></div>
             <div>
-                <button data-command="l">
-                    <i class="bi-arrow-left"></i>
-                </button>
+                <svg class="joystick" viewbox="0 0 100 100">
+                    <defs>
+                        <radialGradient id="gradient">
+                            <stop offset="0%" stop-color="white" />
+                            <stop offset="100%" stop-color="transparent" />
+                        </radialGradient>
+                    </defs>
+
+                    <circle cx="50" cy="50" r="50" fill="yellow" />
+                    <circle cx="50" cy="50" r="50" fill="url(#gradient)" opacity="0" />
+                    <path d="M70 45 L85 45 L85 40 L95 50 L85 60 L85 55 L70 55 Z" stroke="black" stroke-width="2" />
+                    <path d="M45 30 L45 15 L40 15 L50 5 L60 15 L55 15 L55 30 Z" stroke="black" stroke-width="2" />
+                    <path d="M30 45 L15 45 L15 40 L5 50 L15 60 L15 55 L30 55 Z" stroke="black" stroke-width="2" />
+                    <path d="M45 70 L45 85 L40 85 L50 95 L60 85 L55 85 L55 70 Z" stroke="black" stroke-width="2" />
+                </svg>
             </div>
-            <div>
-                <button data-command="b">💣</button>
-            </div>
-            <div>
-                <button data-command="r">
-                    <i class="bi-arrow-right"></i>
-                </button>
-            </div>
-            <div></div>
-            <div>
-                <button data-command="d">
-                    <i class="bi-arrow-down"></i>
-                </button>
-            </div>
-            <div></div>
         </div>
     </div>
 
