--- a/src/Riganti.Bomberman/Riganti.Bomberman/wwwroot/index.html
+++ b/src/Riganti.Bomberman/Riganti.Bomberman/wwwroot/index.html
@@ -98,7 +98,7 @@
     <div class="step-0">
         <h1>BOMBERMAN</h1>
         <p>
-            <input type="text" class="player-name" placeholder="Your name" />
+            <input type="text" class="player-name" placeholder="Your name" maxlength="15" />
         </p>
         <p class="button-row">
             <button class="connect">Join the game</button>
